// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationChecklist render 0/1 complete 1`] = `
<DocumentFragment>
  <div
    class="list-group list-group-flush activationChecklist"
  >
    <div
      data-reach-accordion=""
    >
      <div
        class="list-group-item container"
        data-reach-accordion-item=""
        data-state="collapsed"
      >
        <button
          aria-controls="panel--1--0"
          aria-expanded="false"
          class="btn btnLink list-group-item list-group-item-action button"
          data-reach-accordion-button=""
          data-state="collapsed"
          id="button--1--0"
        >
          <div
            class="d-flex justify-content-between activationChecklistItem"
          >
            <div
              class="d-flex align-items-center"
            >
              <span
                class="iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon iconDown"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon iconRight"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                  />
                </svg>
              </span>
              <span>
                title1
              </span>
            </div>
            <div>
              <svg
                aria-label="Not completed"
                class="mdi-icon iconInline text-muted"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          aria-labelledby="button--1--0"
          class="px-2"
          data-reach-accordion-panel=""
          data-state="collapsed"
          hidden=""
          id="panel--1--0"
          role="region"
        >
          <div
            class="pb-1 detail"
          >
            detail1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivationChecklist render 0/1 complete 2`] = `
<DocumentFragment>
  <div
    class="list-group list-group-flush activationChecklist"
  >
    <div
      data-reach-accordion=""
    >
      <div
        class="list-group-item container"
        data-reach-accordion-item=""
        data-state="collapsed"
      >
        <button
          aria-controls="panel--5--0"
          aria-expanded="false"
          class="btn btnLink list-group-item list-group-item-action button"
          data-reach-accordion-button=""
          data-state="collapsed"
          id="button--5--0"
        >
          <div
            class="d-flex justify-content-between activationChecklistItem"
          >
            <div
              class="d-flex align-items-center"
            >
              <span
                class="iconContainer"
              >
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon iconDown"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="mdi-icon iconInline icon iconRight"
                  fill="currentColor"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                  />
                </svg>
              </span>
              <span>
                title1
              </span>
            </div>
            <div>
              <svg
                aria-label="Not completed"
                class="mdi-icon iconInline text-muted"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          aria-labelledby="button--5--0"
          class="px-2"
          data-reach-accordion-panel=""
          data-state="collapsed"
          hidden=""
          id="panel--5--0"
          role="region"
        >
          <div
            class="pb-1 detail"
          >
            detail1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivationChecklist render 1/1 complete 1`] = `
<DocumentFragment>
  <div
    class="list-group list-group-flush activationChecklist"
  >
    <div
      data-reach-accordion=""
    >
      <div
        class="list-group-item container"
        data-reach-accordion-item=""
        data-state="collapsed"
      >
        <button
          aria-controls="panel--8--0"
          aria-expanded="false"
          class="btn btnLink list-group-item list-group-item-action button"
          data-reach-accordion-button=""
          data-state="collapsed"
          id="button--8--0"
        >
          <div
            class="d-flex justify-content-between activationChecklistItem"
          >
            <div
              class="d-flex align-items-center"
            >
              <span
                class="iconInline iconContainer iconDown"
              >
                <svg
                  class="mdi-icon icon"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                  />
                </svg>
              </span>
              <span
                class="iconInline iconContainer iconRight"
              >
                <svg
                  class="mdi-icon icon"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                  />
                </svg>
              </span>
              <span>
                title1
              </span>
            </div>
            <div>
              <svg
                class="mdi-icon iconInline text-success"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          aria-labelledby="button--1--0"
          class="px-2"
          data-reach-accordion-panel=""
          data-state="collapsed"
          hidden=""
          id="panel--1--0"
          role="region"
        >
          <div
            class="pb-1 detail"
          >
            detail1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActivationChecklist render loading 1`] = `
<DocumentFragment>
  <div
    class="iconInline loadingSpinner my-2"
  />
</DocumentFragment>
`;
